spacing issue fixes

--- a/assets/styles/pages/_all-pages.scss
+++ b/assets/styles/pages/_all-pages.scss
@@ -157,6 +157,10 @@ a.skip-main:focus {
 
 }
 
+.cat-bottom-dist-32{
+    margin-bottom: govuk-px-to-rem(40);
+}
+
 .govuk-main-wrapper {
     padding-top: govuk-px-to-rem(25);
     padding-bottom: govuk-px-to-rem(60);
